--- a/studentprofile.html
+++ b/studentprofile.html
@@ -8,112 +8,113 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/studentprofile.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css.map">
+    <link rel="stylesheet" href="css/commons.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="images/logoW.png" alt="">
+    <div class="container">
+        <header>
+            <div class="logo">
+                <img src="images/logoW.png" alt="">
+            </div>
+            <p>"Automating Your Graduation Success"</p>
+        </header>
+        <div class="nav-container">
+            <a href="#" class="nav-bullet">
+                <i class="fa-regular fa-user"></i>
+                <span>Profile</span>
+            </a>
+            <a href="#" class="nav-bullet">
+                <i class="fa-solid fa-people-group"></i>
+                <span>Team</span>
+            </a>
+            <a href="#" class="nav-bullet">
+                <i class="fa-solid fa-user-pen"></i>
+                <span>Edit Profile</span>
+            </a>
+            <a href="#" class="nav-bullet">
+                <i class='bx bx-log-out-circle'></i>
+                <span>Log Out</span>
+            </a>
         </div>
-        <p>"Automating Your Graduation Success"</p>
-    </header>
-    <div class="nav-container">
-        <a href="#" class="nav-bullet">
-            <i class="fa-regular fa-user"></i>
-            <span>Profile</span>
-        </a>
-        <a href="#" class="nav-bullet">
-            <i class="fa-solid fa-people-group"></i>
-            <span>Team</span>
-        </a>
-        <a href="#" class="nav-bullet">
-            <i class="fa-solid fa-user-pen"></i>
-            <span>Edit Profile</span>
-        </a>
-        <a href="#" class="nav-bullet">
-            <i class='bx bx-log-out-circle'></i>
-            <span>Log Out</span>
-        </a>
-    </div>
-    <div class="profile">
-        <div class="info">
-            <div class="id">
-                <div class="personalInfo">
-                    <div class="imgbox"><img src="images/Generic avatar.png" alt=""></div>
-                    <div class="identity">
-                        <p class="name">Ahmed Ali Ramadan</p>
-                        <p class="number">200043358</p>
+        <div class="profile">
+            <div class="info">
+                <div class="id">
+                    <div class="personalInfo">
+                        <div class="imgbox"><img src="images/Generic avatar.png" alt=""></div>
+                        <div class="identity">
+                            <p class="name">Ahmed Ali Ramadan</p>
+                            <p class="number">200043358</p>
+                        </div>
+                    </div>
+                    <p class="pr">Computer Science Student</p>
+                </div>
+                <div class="academicInfo">
+                    <div class="major">
+                        <ul>
+                            <li>Major: Computer Science</li>
+                            <li>GPA: 3.5</li>
+                            <li>semester: 7</li>
+                            <li>Credit Hours: 120</li>
+                        </ul>
+                    </div>
+                    <div class="tracks">
+                        <h2>Tracks</h2>
+                        <ul>
+                            <li>FrontEnd</li>
+                            <li>Ui Ux</li>
+                        </ul>
+                    </div>
+                    <div class="contact">
+                        <h2>Contact Info</h2>
+                        <ul>
+                            <li id="Email">student_mail@gmail.com</li>
+                            <li id="phone">01007339285</li>
+                        </ul>
                     </div>
                 </div>
-                <p class="pr">Computer Science Student</p>
             </div>
-            <div class="academicInfo">
-                <div class="major">
-                    <ul>
-                        <li>Major: Computer Science</li>
-                        <li>GPA: 3.5</li>
-                        <li>semester: 7</li>
-                        <li>Credit Hours: 120</li>
-                    </ul>
-                </div>
-                <div class="tracks">
-                    <h2>Tracks</h2>
-                    <ul>
-                        <li>FrontEnd</li>
-                        <li>Ui Ux</li>
-                    </ul>
-                </div>
-                <div class="contact">
-                    <h2>Contact Info</h2>
-                    <ul>
-                        <li id="Email">student_mail@gmail.com</li>
-                        <li id="phone">01007339285</li>
-                    </ul>
+            <div class="team">
+                <h2>Team</h2>
+                <h3>Auto Grad</h3>
+                <p>The project aims to simplify and organize the graduation process for university students by providing a centralized platform.</p>
+                <h4>Members:</h4>
+                <ol>
+                    <li>Ahmed Ali Ramdan</li>
+                    <li>Omar Ahmed Fathy</li>
+                    <li>Zeyad Osama Mohmaed</li>
+                    <li>Loay Ahmed Mohamed</li>
+                </ol>
+                <div class="supervisors">
+                    <div class="doctor">
+                        <img src="images/Generic avatar.png" alt="">
+                        <p>Doctor<br>Mohamed Ibrahim</p>
+                    </div>
+                    <div class="doctor">
+                        <img src="images/Generic avatar.png" alt="">
+                        <p>Doctor<br>Mohamed Ibrahim</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="team">
-            <h2>Team</h2>
-            <h3>Auto Grad</h3>
-            <p>The project aims to simplify and organize the graduation process for university students by providing a centralized platform.</p>
-            <h4>Members:</h4>
-            <ol>
-                <li>Ahmed Ali Ramdan</li>
-                <li>Omar Ahmed Fathy</li>
-                <li>Zeyad Osama Mohmaed</li>
-                <li>Loay Ahmed Mohamed</li>
-            </ol>
-            <div class="supervisors">
-                <div class="doctor">
-                    <img src="images/Generic avatar.png" alt="">
-                    <p>Doctor<br>Mohamed Ibrahim</p>
+        <div class="seminars">
+            <div class="weeklyseminar">
+                <h2>Weekly Seminar</h2>
+                <div class="date">
+                    <div class="hour"><i class="fa-regular fa-clock"></i> 10:00 AM</div>
+                    <div class="day">
+                        <i class="fa-regular fa-calendar-check"></i>
+                        <span>August</span>
+                        <span>5</span>
+                    </div>
                 </div>
-                <div class="doctor">
-                    <img src="images/Generic avatar.png" alt="">
-                    <p>Doctor<br>Mohamed Ibrahim</p>
-                </div>
+                <h2>Requirments</h2>
+                <ol>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
             </div>
-        </div>
-    </div>
-    <div class="seminars">
-        <div class="weeklyseminar">
-            <h2>Weekly Seminar</h2>
-            <div class="date">
-                <div class="hour"><i class="fa-regular fa-clock"></i> 10:00 AM</div>
-                <div class="day">
-                    <i class="fa-regular fa-calendar-check"></i>
-                    <span>August</span>
-                    <span>5</span>
-                </div>
-            </div>
-            <h2>Requirments</h2>
-            <ol>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ol>
         </div>
     </div>
 </body>
