--- a/docteams.html
+++ b/docteams.html
@@ -47,6 +47,67 @@
             <li>Team 4</li>
             <li>Team 5</li>
         </ol>
+        <div class="teamdata">
+            <div class="teaminfo">
+                <div class="logoAndName">
+                    <div class="imagebox"><img src="images/logo.png" alt=""></div>
+                    <h4 style="padding-top: 30px;">AutoGrad</h4>
+                </div>
+                <p id="bio">The project aims to simplify and organize the graduation process for university students by providing a centralized platform. This system allows students to form teams, select supervisors, track seminar schedules and requirements, and facilitate seamless communication with supervisors.</p>
+                <div class="reqsAndGrade">
+                    <ul class="reqs">
+                        <h3>Requirements</h3>
+                        <li>LOGO</li>
+                        <li>Name</li>
+                        <li>Description</li>
+                        <li>Proposal</li>
+                    </ul>
+                </div>
+                <div id="teamLeader">
+                    <div class="imagebox"><img src="images/Generic avatar.png" alt=""></div>
+                    <div class="nameId">
+                        <h4>Ahmed Ali Ramdan</h4>
+                        <h4>Team Leader</h4>
+                    </div>
+                </div>
+                <div class="proposal">
+                </div>
+            </div>
+            <div class="grades">
+                <h4>Team Members</h4>
+                <hr>
+                <div class="members">
+                    <div class="student">
+                        <div class="imagebox"><img src="images/Generic avatar.png" alt=""></div>
+                        <div class="nameId">
+                            <h5>Ahmed Ali Ramdan</h5>
+                            <h5>200019942</h5>
+                        </div>
+                    </div>
+                    <div class="student">
+                        <div class="imagebox"><img src="images/Generic avatar.png" alt=""></div>
+                        <div class="nameId">
+                            <h5>Ahmed Ali Ramdan</h5>
+                            <h5>200019942</h5>
+                        </div>
+                    </div>
+                    <div class="student">
+                        <div class="imagebox"><img src="images/Generic avatar.png" alt=""></div>
+                        <div class="nameId">
+                            <h5>Ahmed Ali Ramdan</h5>
+                            <h5>200019942</h5>
+                        </div>
+                    </div>
+                    <div class="student">
+                        <div class="imagebox"><img src="images/Generic avatar.png" alt=""></div>
+                        <div class="nameId">
+                            <h5>Ahmed Ali Ramdan</h5>
+                            <h5>200019942</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script>
         const listItems = document.querySelectorAll('.teams li');
