--- a/docteams.html
+++ b/docteams.html
@@ -74,6 +74,7 @@
                 </div>
             </div>
             <div class="grades">
+                <div class="marks">Grades</div>
                 <h4>Team Members</h4>
                 <hr>
                 <div class="members">
@@ -83,6 +84,7 @@
                             <h5>Ahmed Ali Ramdan</h5>
                             <h5>200019942</h5>
                         </div>
+                        <span id="mark">00<span id="tmark"> / 50</span></span>
                     </div>
                     <div class="student">
                         <div class="imagebox"><img src="images/Generic avatar.png" alt=""></div>
@@ -90,6 +92,7 @@
                             <h5>Ahmed Ali Ramdan</h5>
                             <h5>200019942</h5>
                         </div>
+                        <span id="mark">00<span id="tmark"> / 50</span></span>
                     </div>
                     <div class="student">
                         <div class="imagebox"><img src="images/Generic avatar.png" alt=""></div>
@@ -97,6 +100,7 @@
                             <h5>Ahmed Ali Ramdan</h5>
                             <h5>200019942</h5>
                         </div>
+                        <span id="mark">00<span id="tmark"> / 50</span></span>
                     </div>
                     <div class="student">
                         <div class="imagebox"><img src="images/Generic avatar.png" alt=""></div>
@@ -104,6 +108,7 @@
                             <h5>Ahmed Ali Ramdan</h5>
                             <h5>200019942</h5>
                         </div>
+                        <span id="mark">00<span id="tmark"> / 50</span></span>
                     </div>
                 </div>
             </div>
