student profile update

--- a/studentprofile.html
+++ b/studentprofile.html
@@ -31,7 +31,7 @@
                 <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Profile</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="login.html" class="nav-bullet">
                 <i class='bx bx-log-out-circle'></i>
                 <span>Log Out</span>
             </a>
@@ -77,8 +77,8 @@
                 <h2>Team</h2>
                 <h3>Auto Grad</h3>
                 <p>The project aims to simplify and organize the graduation process for university students by providing a centralized platform.</p>
-                <h4>Members:</h4>
                 <ol>
+                    <h4>Members:</h4>
                     <li>Ahmed Ali Ramdan</li>
                     <li>Omar Ahmed Fathy</li>
                     <li>Zeyad Osama Mohmaed</li>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <h2>Requirments</h2>
-                <ol>
+                <ol style="padding: 0px 20px;">
                     <li></li>
                     <li></li>
                     <li></li>
