--- a/editprofile.html
+++ b/editprofile.html
@@ -19,7 +19,7 @@
             <p>"Automating Your Graduation Success"</p>
         </header>
         <div class="nav-container">
-            <a href="#" class="nav-bullet">
+            <a href="studentprofile.html" class="nav-bullet">
                 <i class="fa-regular fa-user"></i>
                 <span>Profile</span>
             </a>
@@ -31,7 +31,7 @@
                 <i class="fa-solid fa-people-group"></i>
                 <span>Teams</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="editprofile.html" class="nav-bullet">
                 <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Profile</span>
             </a>
@@ -46,7 +46,7 @@
                 <button>Change Photo</button>
             </div>
             <div class="form">
-                <input type="text" placeholder="Enter Name">
+                <input type="text" placeholder="Name">
                 <input type="text" placeholder="ID">
                 <textarea placeholder="BIO"></textarea>
                 <input type="text" placeholder="Major">
