--- a/studentprofile.html
+++ b/studentprofile.html
@@ -19,15 +19,15 @@
             <p>"Automating Your Graduation Success"</p>
         </header>
         <div class="nav-container">
-            <a href="#" class="nav-bullet">
+            <a href="studentprofile.html" class="nav-bullet">
                 <i class="fa-regular fa-user"></i>
                 <span>Profile</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="TeamProfile.html" class="nav-bullet">
                 <i class="fa-solid fa-people-group"></i>
                 <span>Team</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="editprofile.html" class="nav-bullet">
                 <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Profile</span>
             </a>
