ibrahem update navbar

--- a/DoctorProfile.html
+++ b/DoctorProfile.html
@@ -22,19 +22,19 @@
                 <i class="fa-regular fa-user"></i>
                 <span>Profile</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="docteams.html" class="nav-bullet">
                 <i class="fa-solid fa-people-group"></i>
                 <span>Team</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="doctorseminars.html" class="nav-bullet">
                 <i class='bx bx-slideshow'></i>
                 <span>Seminar</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="editprofile.html" class="nav-bullet">
                 <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Profile</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="login.html" class="nav-bullet">
                 <i class='bx bx-log-out-circle'></i>
                 <span>Log Out</span>
             </a>
