--- a/docteams.html
+++ b/docteams.html
@@ -19,23 +19,23 @@
             <p>"Automating Your Graduation Success"</p>
         </header>
         <div class="nav-container">
-            <a href="#" class="nav-bullet">
+            <a href="DoctorProfile.html" class="nav-bullet">
                 <i class="fa-regular fa-user"></i>
                 <span>Profile</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="doctorseminars.html" class="nav-bullet">
                 <i class="fa-solid fa-calendar-check"></i>
                 <span>Seminars</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="docteams.html" class="nav-bullet">
                 <i class="fa-solid fa-people-group"></i>
                 <span>Teams</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="editprofile.html" class="nav-bullet">
                 <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Profile</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="login.html" class="nav-bullet">
                 <i class='bx bx-log-out-circle'></i>
                 <span>Log Out</span>
             </a>
