--- a/TeamProfile.html
+++ b/TeamProfile.html
@@ -27,7 +27,7 @@
         <!-- nav left bar -->
         
         <div class="nav-container">
-            <a href="#" class="nav-bullet">
+            <a href="studentprofile.html" class="nav-bullet">
                 <i class="fa-regular fa-user"></i>
                 <span>Profile</span>
             </a>
@@ -35,11 +35,10 @@
                 <i class="fa-solid fa-people-group"></i>
                 <span>Team</span>
             </a>
-            <a href="#" class="nav-bullet">
-                <i class='bx bx-slideshow'></i>
-                <span>Seminar</span>
-            </a>
-            <a href="#" class="nav-bullet">
+
+
+
+            <a href="editprofile.html" class="nav-bullet">
                 <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Profile</span>
             </a>
@@ -190,7 +189,7 @@
 
                 <!-- زر إضافة عضو جديد -->
                 <div class="add-member-btn">
-                    <button><i class='bx bx-plus'></i></button>
+                    <button><a href="PickTeam.html"><i class='bx bx-plus'></i></a></button>
                 </div>
 
                             <!-- المشرفين -->
