--- a/editprofile.html
+++ b/editprofile.html
@@ -23,19 +23,15 @@
                 <i class="fa-regular fa-user"></i>
                 <span>Profile</span>
             </a>
-            <a href="#" class="nav-bullet">
-                <i class="fa-solid fa-calendar-check"></i>
-                <span>Seminars</span>
-            </a>
-            <a href="#" class="nav-bullet">
-                <i class="fa-solid fa-people-group"></i>
-                <span>Teams</span>
-            </a>
+
+
+
+
             <a href="editprofile.html" class="nav-bullet">
                 <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Profile</span>
             </a>
-            <a href="#" class="nav-bullet">
+            <a href="login.html" class="nav-bullet">
                 <i class='bx bx-log-out-circle'></i>
                 <span>Log Out</span>
             </a>
