update doc teams and edit team profil

--- a/PickTeam.html
+++ b/PickTeam.html
@@ -21,7 +21,7 @@
             <div class="slogan">  
                 <p>"Automating Your Graduation Success"</p> 
             </div>
-            <button class="PickAuto-btn" onclick="openModal()">Pick Team Auto</button>
+            <button class="PickAuto-btn" onclick="openModal()">Pick Auto</button>
 
         </header>
 
