--- a/PickTeam.html
+++ b/PickTeam.html
@@ -39,7 +39,7 @@
                         <p>GPA: 3.03</p>
                     </div>
                 </div>
-                <button class="Add-btn">Add</i></button>
+                <button class="Add-btn">Send Request</i></button>
             </div>
 
 
@@ -55,7 +55,7 @@
                         <p>GPA: 3.63</p>
                     </div>
                 </div>
-                <button class="Add-btn">Add</i></button>
+                <button class="Add-btn">Send Request</i></button>
             </div>
 
 
@@ -71,7 +71,7 @@
                         <p>GPA: 3.53</p>
                     </div>
                 </div>
-                <button class="Add-btn">Add</i></button>
+                <button class="Add-btn">Send Request</i></button>
             </div>
 
 
@@ -87,7 +87,7 @@
                         <p>GPA: 2.93</p>
                     </div>
                 </div>
-                <button class="Add-btn">Add</i></button>
+                <button class="Add-btn">Send Request</i></button>
             </div>
 
 
@@ -103,7 +103,7 @@
                         <p>GPA: 3.03</p>
                     </div>
                 </div>
-                <button class="Add-btn">Add</i></button>
+                <button class="Add-btn">Send Request</i></button>
             </div>
 
 
@@ -119,7 +119,7 @@
                         <p>GPA: 3.03</p>
                     </div>
                 </div>
-                <button class="Add-btn">Add</i></button>
+                <button class="Add-btn">Send Request</i></button>
             </div>
             
         </div>
@@ -178,7 +178,7 @@
 
                             <div class="Btn">
                                 <button class="A-btn">Accept</i></button>
-                                <button class="R-btn">Reject</i></button>
+                                <button class="R-btn">Re Pick</i></button>
                             </div>
                             
                         </div>
