create forget password page

--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                     <i class="bx bxs-lock-alt"></i>
                 </div>
                 <div class="forgot-link">
-                    <a href="#">Forgot password?</a>
+                    <a href="ForgetPassword.html">Forgot password?</a>
                 </div>
                 <button type="submit" class="btn">Login</button>
                 <p>or Login with Social Platforms</p>
